--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "express": "^4.16.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "@pokt-network/pocket-js": "^0.0.1-rc"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
