--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.1",
     "morgan": "^1.9.1",
     "@pokt-network/pocket-js": "^0.0.1-rc",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "mongodb": "^3.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
