--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
   "author": "Codemera",
   "license": "MIT",
   "scripts": {
-    "build-server": "webpack --watch --mode development --config ./backend/webpack.config.js",
-    "build-server:prod": "webpack --mode production --config ./backend/webpack.config.js",
-    "start-server": "nodemon --watch backend ./backend/dist/server.js"
+    "build": "webpack --watch --mode development --config webpack.config.js",
+    "build:prod": "webpack --mode production --config webpack.config.js",
+    "start": "nodemon --watch  dist/server.js",
+    "test": "mocha"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4",
@@ -22,9 +23,11 @@
     "mongodb": "^3.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
+    "babel-register": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "debug": "^2.6.9",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
@@ -34,6 +37,7 @@
     "babel-eslint": "^10.0.3",
     "eslint-loader": "^3.0.3",
     "nodemon": "^2.0.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "mocha": "^7.1.0"
   }
 }
