Adding Mongo DB Provider and Persistence Service services.

--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Runtime data
+# Runtime models
 pids
 *.pid
 *.seed
