--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "build": "webpack --watch --mode development --config webpack.config.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
     "start": "nodemon --watch  dist/server.js",
-    "test": "mocha"
+    "test": "mocha --require @babel/register"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4",
@@ -20,14 +20,17 @@
     "morgan": "^1.9.1",
     "@pokt-network/pocket-js": "^0.0.1-rc",
     "axios": "^0.19.2",
-    "mongodb": "^3.5.4"
+    "mongodb": "^3.5.4",
+    "@babel/runtime": "^7.8.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.6",
+    "@babel/node": "^7.8.4",
+    "@babel/register": "^7.8.6",
     "@babel/preset-env": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "babel-loader": "^8.0.6",
-    "babel-register": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "debug": "^2.6.9",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
@@ -38,6 +41,7 @@
     "eslint-loader": "^3.0.3",
     "nodemon": "^2.0.2",
     "dotenv": "^8.2.0",
-    "mocha": "^7.1.0"
+    "mocha": "^7.1.0",
+    "chai": "^4.2.0"
   }
 }
