--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,14 @@
     "test": "mocha --require @babel/register"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
+    "axios": "^0.19.2",
+    "@pokt-network/pocket-js": "^0.1.0-rc",
+    "@pokt-network/aat-js": "^0.0.2-rc",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.1",
-    "morgan": "^1.9.1",
-    "@pokt-network/pocket-js": "^0.0.1-rc",
-    "axios": "^0.19.2",
     "mongodb": "^3.5.4",
-    "@babel/runtime": "^7.8.4"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -42,6 +43,7 @@
     "nodemon": "^2.0.2",
     "dotenv": "^8.2.0",
     "mocha": "^7.1.0",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "subpackage": "^1.1.0"
   }
 }
