--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "build": "webpack --watch --mode development --config webpack.config.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
-    "start": "nodemon --watch  dist/server.js",
-    "test": "mocha --require @babel/register"
+    "start": "nodemon dist/server.js",
+    "test": "mocha --require @babel/register --recursive tests"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
