--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,21 +15,24 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "node-sass": "^4.13.1",
     "bootstrap": "^4.4.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1"
   },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react": "^7.19.0",
+    "node-sass": "^4.13.1"
+  },
   "scripts": {
-    "start": "node_modules/.bin/react-scripts start",
+    "start": "BROWSER=none node_modules/.bin/react-scripts start",
     "build": "node_modules/.bin/react-scripts build",
     "test": "node_modules/.bin/react-scripts test",
     "eject": "node_modules/.bin/react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
