--- a/backend/package.json
+++ b/backend/package.json
@@ -16,33 +16,36 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "@pokt-network/pocket-js": "^0.1.0-rc",
     "@pokt-network/aat-js": "^0.0.2-rc",
+    "@pokt-network/pocket-js": "^0.1.0-rc",
+    "axios": "^0.19.2",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.1",
     "mongodb": "^3.5.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nyc": "^15.0.0",
+    "query-string": "^6.11.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.6",
     "@babel/node": "^7.8.4",
-    "@babel/register": "^7.8.6",
-    "@babel/preset-env": "^7.8.4",
     "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.6",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
     "debug": "^2.6.9",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "mocha": "^7.1.0",
+    "nodemon": "^2.0.2",
+    "subpackage": "^1.1.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2",
     "webpack-dev-middleware": "^3.7.2",
-    "eslint": "^6.8.0",
-    "babel-eslint": "^10.0.3",
-    "eslint-loader": "^3.0.3",
-    "nodemon": "^2.0.2",
-    "dotenv": "^8.2.0",
-    "mocha": "^7.1.0",
-    "chai": "^4.2.0",
-    "subpackage": "^1.1.0"
+    "webpack-node-externals": "^1.7.2"
   }
 }
