--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^3.5.4",
     "morgan": "^1.9.1",
     "nyc": "^15.0.0",
-    "query-string": "^6.11.1"
+    "query-string": "^6.11.1",
+    "googleapis": "^48.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
