--- a/.gitignore
+++ b/.gitignore
@@ -172,9 +172,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -227,10 +224,8 @@ build/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.*
 
 npm-debug.log*
 yarn-debug.log*
