--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,20 @@
   "author": "Codemera",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.0",
-    "react-router-dom": "^5.1.2",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
-    "@fortawesome/react-fontawesome": "^0.1.9",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1"
+    "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
