--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "start": "nodemon dist/server.js",
     "test": "mocha --require @babel/register --recursive tests",
     "test:services": "mocha --require @babel/register --recursive tests/services",
-    "test:providers": "mocha --require @babel/register --recursive tests/providers"
+    "test:providers": "mocha --require @babel/register --recursive tests/providers",
+    "test:models": "mocha --require @babel/register --recursive tests/models"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
