--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "query-string": "^6.11.1",
     "googleapis": "^48.0.0",
     "bcrypt": "^4.0.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "stripe": "^8.33.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
