--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "start": "BROWSER=none node_modules/.bin/react-scripts start",
     "build": "node_modules/.bin/react-scripts build",
     "test": "node_modules/.bin/react-scripts test",
-    "eject": "node_modules/.bin/react-scripts eject"
+    "eject": "node_modules/.bin/react-scripts eject",
+    "lint": "eslint src/"
   },
   "browserslist": {
     "production": [
