--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Pocket Daskboard CI
 
 on:
   push:
@@ -10,7 +10,6 @@ on:
   pull_request:
     branches:
       - master
-
 
 
 jobs:
@@ -64,4 +63,3 @@ jobs:
 
         env:
           CI: true
-          TEST_DATABASE_URL: "mongodb://mongo:27017"
