--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,6 +13,7 @@ on:
 
 
 jobs:
+  # Backend CI
   backend:
 
     runs-on: ubuntu-latest
@@ -35,18 +36,19 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # Backend CI
-      - name: Install dependencies
-        working-directory: backend
-        run: yarn
+      run: ping mongo
+      run: ping mongodb
+        #      - name: Install dependencies
+        #        working-directory: backend
+        #        run: yarn
 
-      #      - name: Running lint
-      #        working-directory: backend
-      #        run: yarn lint
+        #      - name: Running lint
+        #        working-directory: backend
+        #        run: yarn lint
 
-      - name: Running testing
-        working-directory: backend
-        run: yarn test
+        #      - name: Running testing
+        #        working-directory: backend
+        #        run: yarn test
 
         #      # Frontend CI
         #      - name: Install backend dependencies
