--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-        run: ping mongo
+      - run: ping mongo
+      - run: ping mongodb
         #      - name: Install dependencies
         #        working-directory: backend
         #        run: yarn
