--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,7 +24,7 @@ jobs:
 
     services:
       mongodb:
-        image: mongo:latest
+        image: mongo:4.2
         ports:
           - 27017:27017
 
