--- a/backend/package.json
+++ b/backend/package.json
@@ -56,6 +56,7 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-node-externals": "^1.7.2",
-    "dotenv-webpack": "^1.7.0"
+    "dotenv-webpack": "^1.7.0",
+    "sinon": "^9.0.1"
   }
 }
