--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,7 +23,7 @@ jobs:
         node-version: [10.x]
 
     services:
-      localhost:
+      mongodb:
         image: mongo:4.2
         ports:
           - 27017:27017
