--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,10 @@
     "build": "webpack --watch --mode development --config webpack.config.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
     "start": "nodemon dist/server.js",
-    "test": "mocha --require @babel/register --recursive tests",
-    "test:services": "mocha --require @babel/register --recursive tests/services",
-    "test:providers": "mocha --require @babel/register --recursive tests/providers",
-    "test:models": "mocha --require @babel/register --recursive tests/models",
+    "test": "mocha --require @babel/register --exit --recursive tests",
+    "test:services": "mocha --require @babel/register --exit --recursive tests/services",
+    "test:providers": "mocha --require @babel/register --exit --recursive tests/providers",
+    "test:models": "mocha --require @babel/register --exit --recursive tests/models",
     "lint": "eslint ."
   },
   "dependencies": {
