Add build to CI.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -48,6 +48,10 @@ jobs:
         working-directory: backend
         run: yarn test
 
+      - name: Running prod build
+        working-directory: backend
+        run: yarn build:prod
+
         env:
           CI: true
 
@@ -75,6 +79,10 @@ jobs:
       - name: Running lint
         working-directory: frontend
         run: yarn lint
+
+      - name: Running prod build
+        working-directory: frontend
+        run: yarn build:prod
 
         env:
           CI: true
