--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "start": "BROWSER=none node_modules/.bin/react-scripts start",
     "build": "node_modules/.bin/react-scripts build",
+    "build:prod": "node_modules/.bin/react-scripts build --prod",
     "test": "node_modules/.bin/react-scripts test",
     "eject": "node_modules/.bin/react-scripts eject",
     "lint": "eslint src/"
