--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
