Put all eslint, mocha, babel information on package.json.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,10 @@
     "url": "https://github.com/pokt-network/pocket-dashboard",
     "type": "git"
   },
+  "eslintIgnore": [
+    "webpack.config.js",
+    "dist/"
+  ],
   "author": "Codemera",
   "license": "MIT",
   "scripts": {
@@ -17,6 +21,96 @@
     "test:providers": "mocha test/providers",
     "test:models": "mocha test/models",
     "lint": "eslint ."
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      [
+        "@babel/transform-runtime"
+      ]
+    ]
+  },
+  "mocha": {
+    "exit": true,
+    "require": "@babel/register",
+    "file": [
+      "test/setupTests.js"
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "mocha": true,
+      "node": true,
+      "mongo": true
+    },
+    "rules": {
+      "no-console": "warn",
+      "comma-spacing": "error",
+      "semi": [
+        "error",
+        "always"
+      ],
+      "quotes": [
+        "error",
+        "double"
+      ],
+      "no-unused-vars": "off",
+      "eqeqeq": "error",
+      "no-alert": "error",
+      "curly": "error",
+      "brace-style": [
+        "error",
+        "1tbs"
+      ],
+      "object-curly-spacing": [
+        "error",
+        "never"
+      ],
+      "function-call-argument-newline": [
+        "error",
+        "never"
+      ],
+      "one-var-declaration-per-line": [
+        "error",
+        "always"
+      ],
+      "padding-line-between-statements": [
+        "error",
+        {
+          "blankLine": "always",
+          "prev": [
+            "const",
+            "let",
+            "var"
+          ],
+          "next": "*"
+        },
+        {
+          "blankLine": "any",
+          "prev": [
+            "const",
+            "let",
+            "var"
+          ],
+          "next": [
+            "const",
+            "let",
+            "var"
+          ]
+        }
+      ]
+    },
+    "plugins": [
+      "jsdoc"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:jsdoc/recommended"
+    ],
+    "parser": "babel-eslint"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
