--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,76 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true,
+      "jest": true
+    },
+    "rules": {
+      "no-console": "warn",
+      "comma-spacing": "error",
+      "semi": [
+        "error",
+        "always"
+      ],
+      "quotes": [
+        "error",
+        "double"
+      ],
+      "eqeqeq": "error",
+      "no-alert": "error",
+      "curly": "error",
+      "brace-style": [
+        "error",
+        "1tbs"
+      ],
+      "object-curly-spacing": [
+        "error",
+        "never"
+      ],
+      "function-call-argument-newline": [
+        "error",
+        "never"
+      ],
+      "one-var-declaration-per-line": [
+        "error",
+        "always"
+      ],
+      "padding-line-between-statements": [
+        "error",
+        {
+          "blankLine": "always",
+          "prev": [
+            "const",
+            "let",
+            "var"
+          ],
+          "next": "*"
+        },
+        {
+          "blankLine": "any",
+          "prev": [
+            "const",
+            "let",
+            "var"
+          ],
+          "next": [
+            "const",
+            "let",
+            "var"
+          ]
+        }
+      ]
+    },
+    "extends": [
+      "react-app",
+      "plugin:react/recommended"
+    ]
+  },
+  "eslintIgnore": [
+    "serviceWorker.js"
+  ],
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
