--- a/backend/package.json
+++ b/backend/package.json
@@ -125,7 +125,8 @@
     "googleapis": "^48.0.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
-    "stripe": "^8.33.0"
+    "stripe": "^8.33.0",
+    "big-integer": "^1.6.48"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
