--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "i": "^0.3.6",
     "identicon.js": "^2.3.3",
+    "npm": "^6.14.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-table-next": "^4.0.0",
     "react-dom": "^16.13.0",
     "react-dropzone": "10.2.2",
     "react-router-dom": "^5.1.2",
