--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^16.13.0",
     "react-dropzone": "10.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-spinners": "^0.8.1"
   },
   "eslintConfig": {
     "env": {
