--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "react-dom": "^16.13.0",
     "react-dropzone": "10.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.3.2"
   },
   "eslintConfig": {
     "env": {
