--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,11 +11,13 @@ on:
     branches:
       - master
 
+env:
+  DOCKER_REPOSITORY: poktnetwork/pocket-dashboard
+  DOCKER_BACKEND_PORT: 4200
 
 jobs:
   # Backend CI
   Backend:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -54,10 +56,24 @@ jobs:
 
         env:
           CI: true
+  Backend-Docker:
+    needs: Backend
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Build and Push
+        working-directory: backend
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ DOCKER_REPOSITORY }}
+          build_args: PORT=${{ DOCKER_BACKEND_PORT }}
+          tag_with_ref: true
+          always_pull: true
 
   # Frontend CI
   Frontend:
-
     runs-on: ubuntu-latest
 
     strategy:
