--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -62,6 +62,7 @@ jobs:
 
     steps:
       - name: Build and Push
+        working-directory: backend
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
