--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -62,13 +62,13 @@ jobs:
 
     steps:
       - name: Build and Push
-        working-directory: backend
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ DOCKER_REPOSITORY }}
-          build_args: PORT=${{ DOCKER_BACKEND_PORT }}
+          repository: ${{ env.DOCKER_REPOSITORY }}
+          build_args: PORT=${{ env.DOCKER_BACKEND_PORT }}
+          path: backend
           tag_with_ref: true
           always_pull: true
 
