--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,31 +31,31 @@ jobs:
           - 27017:27017
 
     steps:
-      - uses: actions/checkout@v2
+      env:
+        CI: true
+        - uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
+        - name: Use Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v1
+          with:
+            node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies
-        working-directory: backend
-        run: yarn
+        - name: Install dependencies
+          working-directory: backend
+          run: yarn
 
-      - name: Running lint
-        working-directory: backend
-        run: yarn lint
+        - name: Running lint
+          working-directory: backend
+          run: yarn lint
 
-      - name: Running testing
-        working-directory: backend
-        run: yarn test
+        - name: Running testing
+          working-directory: backend
+          run: yarn test
 
-      - name: Running prod build
-        working-directory: backend
-        run: yarn build:prod
+        - name: Running prod build
+          working-directory: backend
+          run: yarn build:prod
 
-        env:
-          CI: true
   Backend-Docker:
     needs: Backend
     runs-on: ubuntu-latest
@@ -68,7 +68,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ env.DOCKER_REPOSITORY }}
           build_args: PORT=${{ env.DOCKER_BACKEND_PORT }}
-          path: backend
+          path: ./backend
           tag_with_ref: true
           always_pull: true
 
