--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -59,11 +59,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo ${{ github.workspace }}/pokt-network/pocket-dashboard
       - name: Build and Push
         uses: docker/build-push-action@v1
         with:
-          path: ${{ github.workspace }}/pokt-network/pocket-dashboard/backend
+          dockerfile: ./backend/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ env.DOCKER_REPOSITORY }}
