--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.4.1",
     "identicon.js": "^2.3.3",
     "prop-types": "^15.7.2",
+    "rc-slider": "^9.2.4",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-table-next": "^4.0.0",
