--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "identicon.js": "^2.3.3",
+    "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "rc-slider": "^9.2.4",
     "react": "^16.13.0",
