--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-table-next": "^4.0.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-dropzone": "10.2.2",
     "react-router-dom": "^5.1.2",
