--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -60,11 +60,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Login to DockerHub Registry
+      - name: Login to Docker Hub registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: Build the tagged Docker image
+      - name: Build docker image
         working-directory: backend
-        run: ls # docker build --build-args PORT=${{ env.DOCKER_BACKEND_PORT }} .
+        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} .
 
   # Frontend CI
   Frontend:
