--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -62,9 +62,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Login to Docker Hub registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: Build docker image
+      - name: Build Docker image
         working-directory: backend
-        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} .
+        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} --tag ${{ env.DOCKER_REPOSITORY }}:${{ github.ref }} .
+      - name: Push Docker image
+        run: docker push ${{ env.DOCKER_REPOSITORY }}:${{ github.ref }}
 
   # Frontend CI
   Frontend:
