--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -64,9 +64,9 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build Docker image
         working-directory: backend
-        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} --tag ${{ env.DOCKER_REPOSITORY }}:${{ github.ref }} .
+        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} --t ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/} .
       - name: Push Docker image
-        run: docker push ${{ env.DOCKER_REPOSITORY }}:${{ github.ref }}
+        run: docker push ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}
 
   # Frontend CI
   Frontend:
