--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -65,7 +65,9 @@ jobs:
         run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/} .
       - name: Push Docker image
         run:
+          - echo "Login to Docker Hub"
           - echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          - echo "Push image to Docker Hub"
           - docker push ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}
 
   # Frontend CI
