--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -64,11 +64,11 @@ jobs:
         working-directory: backend
         run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/} .
       - name: Push Docker image
-        run:
-          - echo "Login to Docker Hub"
-          - echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          - echo "Push image to Docker Hub"
-          - docker push ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}
+        run: |
+          echo "Login to Docker Hub"
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          echo "Push image to Docker Hub"
+          docker push ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}
 
   # Frontend CI
   Frontend:
