--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -98,3 +98,17 @@ jobs:
 
         env:
           CI: true
+
+  Frontend-Docker:
+    needs: Frontend
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Build Docker image
+        working-directory: frontend
+        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}-frontend .
+      - name: Push Docker image
+        run: docker push ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}-frontend
