--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -64,9 +64,9 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build Docker image
         working-directory: backend
-        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}-backend .
+        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:latest-backend .
       - name: Push Docker image
-        run: docker push ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}-backend
+        run: docker push ${{ env.DOCKER_REPOSITORY }}:latest-backend
 
   # Frontend CI
   Frontend:
@@ -109,6 +109,6 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build Docker image
         working-directory: frontend
-        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}-frontend .
+        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:latest-frontend .
       - name: Push Docker image
-        run: docker push ${{ env.DOCKER_REPOSITORY }}:${GITHUB_REF##*/}-frontend
+        run: docker push ${{ env.DOCKER_REPOSITORY }}:latest-frontend
