--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "build": "webpack --watch --mode development --config webpack.config.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
     "start": "nodemon dist/server.js",
-    "start:prod": "pm2 start dist/server.js",
+    "start:prod": "pm2-runtime dist/server.js",
     "test": "mocha test",
     "test:services": "mocha test/services",
     "test:providers": "mocha test/providers",
