--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
@@ -20,8 +21,8 @@
     "identicon.js": "^2.3.3",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
-    "rc-steps": "^3.5.0",
     "rc-slider": "^9.2.4",
+    "rc-steps": "^3.5.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-table-next": "^4.0.0",
