--- a/.github/workflows/nodejs-docker.yml
+++ b/.github/workflows/nodejs-docker.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Pocket Daskboard Docker CI
+name: Docker CI
 
 on:
   push:
@@ -40,6 +40,6 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build Docker image
         working-directory: frontend
-        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:latest-frontend .
+        run: docker build -t ${{ env.DOCKER_REPOSITORY }}:latest-frontend .
       - name: Push Docker image
         run: docker push ${{ env.DOCKER_REPOSITORY }}:latest-frontend
