--- a/.github/workflows/nodejs-docker.yml
+++ b/.github/workflows/nodejs-docker.yml
@@ -13,7 +13,6 @@ on:
 
 env:
   DOCKER_REPOSITORY: poktnetwork/pocket-dashboard
-  DOCKER_BACKEND_PORT: 4200
 
 jobs:
   # Backend CI
@@ -26,7 +25,7 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build Docker image
         working-directory: backend
-        run: docker build --build-arg PORT=${{ env.DOCKER_BACKEND_PORT }} -t ${{ env.DOCKER_REPOSITORY }}:latest-backend .
+        run: docker build -t ${{ env.DOCKER_REPOSITORY }}:latest-backend .
       - name: Push Docker image
         run: docker push ${{ env.DOCKER_REPOSITORY }}:latest-backend
 
