--- a/backend/package.json
+++ b/backend/package.json
@@ -129,7 +129,8 @@
     "stripe": "^8.33.0",
     "big-integer": "^1.6.48",
     "dotenv": "^8.2.0",
-    "pm2": "^4.3.1"
+    "pm2": "^4.3.1",
+    "@sendgrid/mail": "^7.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
