--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.1.4",
     "identicon.js": "^2.3.3",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "rc-slider": "^9.2.4",
