Integration signup with backend.

--- a/backend/package.json
+++ b/backend/package.json
@@ -116,45 +116,46 @@
     "@babel/runtime": "^7.8.4",
     "@pokt-network/aat-js": "^0.0.2-rc",
     "@pokt-network/pocket-js": "^0.3.1-rc",
+    "@sendgrid/mail": "^7.1.0",
     "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
+    "big-integer": "^1.6.48",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.1",
+    "googleapis": "^48.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.4",
     "morgan": "^1.9.1",
     "nyc": "^15.0.0",
-    "query-string": "^6.11.1",
-    "googleapis": "^48.0.0",
-    "bcrypt": "^4.0.1",
-    "cors": "^2.8.5",
-    "stripe": "^8.33.0",
-    "big-integer": "^1.6.48",
-    "dotenv": "^8.2.0",
     "pm2": "^4.3.1",
-    "@sendgrid/mail": "^7.1.0"
+    "query-string": "^6.11.1",
+    "stripe": "^8.33.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.6",
     "@babel/node": "^7.8.4",
+    "@babel/plugin-syntax-bigint": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.6",
-    "@babel/plugin-syntax-bigint": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "debug": "^2.6.9",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-jsdoc": "^22.1.0",
     "mocha": "^7.1.0",
+    "sinon": "^9.0.1",
     "subpackage": "^1.1.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-node-externals": "^1.7.2",
-    "dotenv-webpack": "^1.7.0",
-    "sinon": "^9.0.1"
+    "webpack-node-externals": "^1.7.2"
   }
 }
