--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,8 @@
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.1",
     "secure-ls": "^1.2.6",
-    "yup": "^0.28.5"
+    "yup": "^0.28.5",
+    "qs": "^6.9.4"
   },
   "eslintConfig": {
     "env": {
