--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-dropzone": "10.2.2",
+    "react-google-recaptcha": "^2.0.1",
     "react-infinite-scroller": "^1.2.4",
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.1.2",
