Working Dockerfile for backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,3 +11,8 @@ COPY yarn.lock $APP_HOME
 RUN yarn install
 
 COPY . $APP_HOME
+
+ENV HOST=0.0.0.0 PORT=4200
+
+EXPOSE ${PORT}
+CMD [ "yarn", "start" ]
