--- a/backend/package.json
+++ b/backend/package.json
@@ -130,7 +130,8 @@
     "nyc": "^15.0.0",
     "pm2": "^4.3.1",
     "query-string": "^6.11.1",
-    "stripe": "^8.33.0"
+    "stripe": "^8.33.0",
+    "bull": "^3.14.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
