--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.1",
+    "react-to-print": "^2.9.0",
     "secure-ls": "^1.2.6",
     "yup": "^0.28.5"
   },
