--- a/frontend/package.json
+++ b/frontend/package.json
@@ -132,7 +132,7 @@
   "scripts": {
     "start": "BROWSER=none node_modules/.bin/react-scripts start",
     "build": "node_modules/.bin/react-scripts build",
-    "build:prod": "node_modules/.bin/react-scripts build --prod --expose-gc --max-old-space-size=8192",
+    "build:prod": "node_modules/.bin/react-scripts --expose-gc --max-old-space-size=8192 build --prod ",
     "test": "node_modules/.bin/react-scripts test",
     "eject": "node_modules/.bin/react-scripts eject",
     "lint": "eslint src/"
