--- a/backend/package.json
+++ b/backend/package.json
@@ -116,6 +116,7 @@
     "@babel/runtime": "^7.8.4",
     "@pokt-network/pocket-js": "0.5.4-rc",
     "@sendgrid/mail": "^7.1.0",
+    "@sendgrid/client": "^7.2.0",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "big-integer": "^1.6.48",
