--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,13 +21,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "big-integer": "^1.6.48",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
     "identicon.js": "^2.3.3",
-    "big-integer": "^1.6.48",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
+    "mout": "^1.2.2",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
