--- a/frontend/package.json
+++ b/frontend/package.json
@@ -131,8 +131,8 @@
   },
   "scripts": {
     "start": "PORT=80 BROWSER=none node_modules/.bin/react-scripts start",
-    "build": "node_modules/.bin/react-scripts build",
-    "build:prod": "node_modules/.bin/react-scripts build --prod",
+    "build": "node_modules/.bin/react-scripts build --max_old_space_size=8192",
+    "build:prod": "node_modules/.bin/react-scripts build --max_old_space_size=8192 --prod",
     "test": "node_modules/.bin/react-scripts test",
     "eject": "node_modules/.bin/react-scripts eject",
     "lint": "eslint src/"
