Changing to testnet domain

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -24,14 +24,14 @@ jobs:
       working-directory: frontend
       env:
         GENERATE_SOURCEMAP: false
-        PUBLIC_URL: https://dashboard.pokt.network
-        REACT_APP_BACKEND_URL: https://api.dashboard.pokt.network:4200
+        PUBLIC_URL: https://dashboard.testnet.pokt.network
+        REACT_APP_BACKEND_URL: https://api-testnet.dashboard.pokt.network:4200
         REACT_APP_POCKET_NETWORK_MAX_DISPATCHER: 10
         REACT_APP_POCKET_NETWORK_MAX_SESSIONS: 100
         REACT_APP_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
         REACT_APP_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443
         REACT_APP_POCKET_NETWORK_TX_FEE: 100000
-        REACT_APP_POCKET_NETWORK_CHAIN_ID: testnet-r1
+        REACT_APP_POCKET_NETWORK_CHAIN_ID: testnet-r2
         REACT_APP_POCKET_FREE_TIER_STAKE_AMOUNT: 20833330000
         REACT_APP_STAKE_DEFAULT_STATUS: Unstaked
         REACT_APP_DEFAULT_MAX_RELAYS_PER_DAY: 6912000
@@ -103,7 +103,7 @@ jobs:
         envkey_POKT_MARKET_PRICE: 0.06
         envkey_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443,https://node2.testnet.pokt.network:443,https://node3.testnet.pokt.network:443,https://node4.testnet.pokt.network:443,https://node5.testnet.pokt.network:443,https://node6.testnet.pokt.network:443,https://node7.testnet.pokt.network:443
         envkey_POCKET_NETWORK_CHAIN_HASH: 0002
-        envkey_POCKET_NETWORK_CHAIN_ID: testnet-r1
+        envkey_POCKET_NETWORK_CHAIN_ID: testnet-r2
         envkey_POCKET_NETWORK_AAT_VERSION: 0.0.1
         envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000000
         envkey_POCKET_FREE_TIER_MAX_RELAY_PER_DAY_AMOUNT: 10000000
